final/k8s/uselessingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uselessappingress
  namespace: uselessappns
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - http:
      paths:
      - path: "/index.html"
        pathType: Prefix
        backend:
          service:
            name: uselessappservice
            port:
              name: uselessport
